--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
         "type": "git",
         "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
     },
+    "main": "app.js",
+    "scripts": {
+      "start": "node ./app.js"
+    },
     "dependencies": {
         "bootstrap": "4.1.1",
         "font-awesome": "4.7.0",
