--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Agency is a one page HTML theme for Bootstrap.",
     "main": "app.js",
     "scripts": {
-      "start": "node ./app.js"
+        "start": "node ./app.js"
     },
     "keywords": [
         "css",
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "bootstrap": "4.1.1",
+        "express": "^4.16.3",
         "font-awesome": "4.7.0",
         "jquery": "3.3.1",
         "jquery.easing": "^1.4.1"
