--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "bootstrap": "4.1.1",
+        "cookie-parser": "^1.4.3",
         "express": "^4.16.3",
         "font-awesome": "4.7.0",
         "jquery": "3.3.1",
